# snakecamel

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: test.yml
snakecamel/: __init__.py  camelize.py  snakeize.py
tests/: test_camelize.py  test_snakecamel.py  test_snakeize.py
