[tool.poetry]
name = "snakecamel"
version = "0.1.0"
description = "An easy-to-use package to convert to camelCase or snake_case"
authors = ["Lysandros Nikolaou <lisandrosnik@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/lysnikolaou/snakecamel"
repository = "https://github.com/lysnikolaou/snakecamel"
documentation = "https://github.com/lysnikolaou/snakecamel"
keywords = ["snakecase", "camelcase"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: General",
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
black = "^22.10.0"
pytest-cov = "^3.0.0"
mypy = "^0.971"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
files = ["snakecamel", "tests"]

[tool.black]
line-length = "100"
target_version = ["py310"]

[tool.pycln]
all = true

[tool.isort]
profile = "black"
line_length = 100

[tool.coverage.run]
branch = true
[tool.coverage.report]
exclude_lines = ["pragma: no cover", "raise AssertionError", "assert False"]
